src/tui/app/src/bottom_pane/snapshots/lha_tui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: src/tui/app/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
› Ask LHA to do anything                        
                                                
  loading · 100% left
