src/tui/app/src/bottom_pane/snapshots/lha_tui__bottom_pane__tests__status_and_queued_messages_snapshot.snap
---
source: src/tui/app/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
› Ask LHA to do anything                        
                                                
  loading · 100% left
