src/tui/app/src/bottom_pane/snapshots/lha_tui__bottom_pane__tests__unified_exec_footer_without_status_snapshot.snap
---
source: src/tui/app/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
  1 background terminal running · /ps to view · 
                                                
                                                
› Ask LHA to do anything                        
                                                
  loading · 100% left
